--- a/index.html
+++ b/index.html
@@ -14,10 +14,9 @@
     </head>
     <body>
         <!-- Responsive navbar-->
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <div class="container px-5"style="background: #8255ef;">
-                <a class="navbar-brand navbar-purple"  href="https://cailleach666.github.io/projects-web/">Go back</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+        <nav>
+            <div class="nav-left">
+                <a href="https://cailleach666.github.io/aid_it/#" style="text-decoration: none; color: aliceblue; font-size: 20px;">Go back</a>
             </div>
         </nav>
         <!-- Page Content-->
