--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <!-- Responsive navbar-->
         <nav>
             <div class="nav-left">
-                <a href="https://cailleach666.github.io/aid_it/#" style="text-decoration: none; color: aliceblue; font-size: 20px;">Go back</a>
+                <a href="https://cailleach666.github.io/projects-web/" style="text-decoration: none; color: aliceblue; font-size: 20px;">Go back</a>
             </div>
         
         </nav>
