--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                                 <ul>
                                     <li style="font-size:20px;"><img src="antelope1.png" width="20px"> Coffee addicted</li>
                                     <li style="font-size:20px;"><img src="rabbit.png" width="20px"> Robin NoSleep</li>
-                                    <li style="font-size:20px;"><img src="foxie.png" width="20px"> Albert Einstein</li>
+                                    <li style="font-size:20px;"><img src="foxie.png" width="20px"> Albert EinNerveLeft</li>
                                     <li style="font-size:20px;"><img src="panda-bear.png" width="20px"> That smart guy</li>
                                   </ul>
                                   <a class="btn" style="color: #8255ef;" href="#!">More members...</a>
