--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
                     </div>
                 </div>
                 <div class="col-lg-5">
-                    <h1 class="font-weight-light">Robotite tegemine IAIB11-13</h1>
+                    <h1 class="font-weight-light">Robotite tegemine 
+                        IAIB11-13</h1>
                     <p>This is a group projects meant for the students who are interested in creating robots. If you have no experience, it is not a problem for us.</p>
                     <a class="btn btn-primary" style="background: #8255ef;" href="#!">Join the project</a>
                 </div>
